finished login and signup pages

--- a/templates/login.html
+++ b/templates/login.html
@@ -27,9 +27,23 @@
   <script type="text/javascript">
     Parse.initialize("MSEW9txqvEpGiAAWRTDGEkwkW2hdkdcWSG7i9hAR", "5Zbv70ZN4wBylpDB0R6w50R8gT4BJYBiXBWOfsAM");
     
-    document.getElementById("signup").onclick = function () {
+    $("#login").click(function() {
+      console.log("hello");
+      Parse.User.logIn($('.username').val(), $('.password').val(), {
+        success: function(user) {
+          window.location.replace("profile.html");
+        },
+        error: function(user, error) {
+          // The login failed. Check error to see why.
+          alert("Sorry, your username or password was incorrect. Please try again.");
+        }
+      });
+    });
+
+    $("#signup").click(function () {
         location.href = "signup.html";
-    };
+    });
+  </script>
 </body>
 
 </html>
