--- a/templates/signup.html
+++ b/templates/signup.html
@@ -36,7 +36,7 @@
         
       user.signUp(null, {
         success: function(user) {
-          window.location.replace("profile.html")
+          window.location.replace("profile.html");
         },
         error: function(user, error) {
           // Show the error message somewhere and let the user try again.
