initialized parse in profile and redirects to profile if logged in

--- a/templates/login.html
+++ b/templates/login.html
@@ -27,8 +27,12 @@
   <script type="text/javascript">
     Parse.initialize("MSEW9txqvEpGiAAWRTDGEkwkW2hdkdcWSG7i9hAR", "5Zbv70ZN4wBylpDB0R6w50R8gT4BJYBiXBWOfsAM");
     
+    var currentUser = Parse.User.current();
+    if (currentUser) {
+        window.location.replace("profile.html");
+    }
+
     $("#login").click(function() {
-      console.log("hello");
       Parse.User.logIn($('.username').val(), $('.password').val(), {
         success: function(user) {
           window.location.replace("profile.html");
