--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,4 +12,7 @@
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 <body>
+	<script>
+ 	   Parse.initialize("MSEW9txqvEpGiAAWRTDGEkwkW2hdkdcWSG7i9hAR", "5Zbv70ZN4wBylpDB0R6w50R8gT4BJYBiXBWOfsAM");
+	</script>
 </body>
