--- a/WearAbouts/www/templates/index.html
+++ b/WearAbouts/www/templates/index.html
@@ -12,6 +12,7 @@
 		<button id="page-1-button" type="button" class="navbar-element btn on-page"><i class="icon-camera-retro icon-2x"></i></button>
 		<button id="page-2-button" type="button" class="navbar-element btn"><i class="icon-users icon-2x"></i></button>
 		<button id="page-3-button" type="button" class="navbar-element btn"><i class="icon-bar-chart icon-2x"></i> </button>
+		<button id="page-4-button" type="button" class="navbar-element btn"><i class="icon-power icon-2x"></i> </button>
 	</div>
 
 	<div id="page">
