Finished Nav Bar-Completed Desgin
Almost ready to begin combining front and back ends #HELLYEAHHHHHHH

--- a/WearAbouts/www/templates/index.html
+++ b/WearAbouts/www/templates/index.html
@@ -4,15 +4,15 @@
 	<title>WearAbouts</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+	<link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="custom.css" />
 </head>
 <body>
 	<div class="navbar">
-		<button id="page-1-button" type="button" class="navbar-element btn on-page"><i class="icon-camera-retro icon-2x"></i></button>
-		<button id="page-2-button" type="button" class="navbar-element btn"><i class="icon-users icon-2x"></i></button>
-		<button id="page-3-button" type="button" class="navbar-element btn"><i class="icon-bar-chart icon-2x"></i> </button>
-		<button id="page-4-button" type="button" class="navbar-element btn"><i class="icon-power icon-2x"></i> </button>
+		<button id="page-1-button" type="button" class="navbar-element btn on-page"><i class="fa fa-camera-retro fa-2x"></i></button>
+		<button id="page-2-button" type="button" class="navbar-element btn"><i class="fa fa-users fa-2x"></i></button>
+		<button id="page-3-button" type="button" class="navbar-element btn"><i class="fa fa-bar-chart fa-2x"></i> </button>
+		<button id="page-4-button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
 	</div>
 
 	<div id="page">
