--- a/WearAbouts/platforms/android/res/xml/config.xml
+++ b/WearAbouts/platforms/android/res/xml/config.xml
@@ -8,6 +8,6 @@
     <author email="dev@cordova.apache.org" href="http://cordova.io">
         Apache Cordova Team
     </author>
-    <content src="index.html" />
+    <content src="templates/html/login.html" />
     <access origin="*" />
 </widget>
