--- a/WearAbouts/www/templates/html/feed.html
+++ b/WearAbouts/www/templates/html/feed.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.0.min.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="../js/feed.js"></script>
-	<script type="text/javascript" src="cordova.js"></script>
+	<script type="text/javascript" src="../../cordova.js"></script>
 </head>
 <body>
 	<div class="navbar">
