--- a/WearAbouts/www/templates/custom.css
+++ b/WearAbouts/www/templates/custom.css
@@ -59,7 +59,7 @@ body {
 	margin-top: 5px;
 	width: 100%;
 }
-
+8
 .frame-it-btn {
 	background-color: black;
 	border-radius: 0;
@@ -114,7 +114,7 @@ body {
 .navbar {
 	position: relative;
 	bottom: 0;
-	height: 60px;
+	height: 4.5em;
 	width: 100%;
 	background-color: #white;
 	margin-bottom: 0;
