Edited custom.css to cater to the login page

--- a/WearAbouts/www/templates/custom.css
+++ b/WearAbouts/www/templates/custom.css
@@ -186,3 +186,12 @@ button {
 	background-color: #DE1F12;
 	color: white;	
 }
+.logincontainer{
+background-color: white;
+color: black;
+width: 100%;
+Height: 100%;
+
+
+
+}
