--- a/WearAbouts/www/templates/html/login.html
+++ b/WearAbouts/www/templates/html/login.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   
-  <div id="main">
+  <div id="logincontainer">
     <h1>WearAbouts</h1>
     <form>
       Username: <input type="text" class="username"><br>
