--- a/WearAbouts/www/templates/html/camera.html
+++ b/WearAbouts/www/templates/html/camera.html
@@ -10,15 +10,10 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.0.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="../js/stats.js"></script>
-  <script type="text/javascript" src="../../cordova.js"></script>
+  <script type="text/javascript" src="../js/camera.js"></script>
 </head>
 <body>
-  <div class="navbar">
-    <button id="camera_button" type="button" class="navbar-element btn on-page"><i class="fa fa-camera-retro fa-2x"></i></button>
-    <button id="feed_button" type="button" class="navbar-element btn"><i class="fa fa-users fa-2x"></i></button>
-    <button id="stats_button" type="button" class="navbar-element btn"><i class="fa fa-bar-chart fa-2x"></i> </button>
-    <button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
-  </div>
+  <div class="camera_shot" id="camera_shot1">
+  <div class="camera_shot" id="camera_shot2">
 </body>
 </html>
