--- a/WearAbouts/www/templates/html/feed.html
+++ b/WearAbouts/www/templates/html/feed.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
-<html>
 <head>
+	<meta charset="utf-8">
+	
 	<title>WearAbouts</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
 	<link rel="stylesheet" href="../font-awesome-4.2.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="../custom.css" />
+	<link rel="stylesheet" type="text/css" href="../css/custom.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.0.min.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
