--- a/WearAbouts/www/templates/html/login.html
+++ b/WearAbouts/www/templates/html/login.html
@@ -3,10 +3,11 @@
   <meta charset="utf-8">
 
   <title>WearAbouts</title>
-  <meta name="description" content="My Parse App">
-  <meta name="viewport" content="width=device-width">
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" type="text/css" href="../css/custom.css" />
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.0.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
