added nav bar to camera.html

--- a/WearAbouts/www/templates/html/camera.html
+++ b/WearAbouts/www/templates/html/camera.html
@@ -13,6 +13,12 @@
   <script type="text/javascript" src="../js/camera.js"></script>
 </head>
 <body>
+  <div class="navbar">
+    <button id="camera_button" type="button" class="navbar-element btn on-page"><i class="fa fa-camera-retro fa-2x"></i></button>
+    <button id="feed_button" type="button" class="navbar-element btn"><i class="fa fa-users fa-2x"></i></button>
+    <button id="stats_button" type="button" class="navbar-element btn"><i class="fa fa-bar-chart fa-2x"></i> </button>
+    <button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
+  </div>
   <div class="camera_shot" id="camera_shot1">
   <div class="camera_shot" id="camera_shot2">
 </body>
