tweaked camera.html

--- a/WearAbouts/www/templates/html/camera.html
+++ b/WearAbouts/www/templates/html/camera.html
@@ -19,7 +19,7 @@
     <button id="stats_button" type="button" class="navbar-element btn"><i class="fa fa-bar-chart fa-2x"></i> </button>
     <button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
   </div>
-  <div class="camera_shot" id="camera_shot1">
-  <div class="camera_shot" id="camera_shot2">
+  <div class="camera_shot" id="camera_shot1">Picture 1</div>
+  <div class="camera_shot" id="camera_shot2">Picture 2</div>
 </body>
 </html>
