--- a/WearAbouts/www/templates/css/custom.css
+++ b/WearAbouts/www/templates/css/custom.css
@@ -3,6 +3,86 @@
 	src: url('ProximaNova-Light.otf') format("opentype");
 }
 
+
+#logintitle{
+color:#DE1F12;
+background-color: white;
+width:100%;
+font-family:Tahoma, Geneva, sans-serif;
+
+position:relative;
+
+}
+
+#loginline{
+width:100%;
+
+
+
+}
+
+
+
+
+
+#logincontainer {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: white;
+
+}
+
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+  color: grey;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
+  margin-bottom: 10px;
+}
+.form-signin .checkbox {
+  font-weight: normal;
+}
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+
+
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+
+
+}
+
+.form-control{
+
+
+
+border-radius: 10px;
+margin-bottom:3%;
+
+
+}
+.password{
+
+height:auto;
+
+}
+
 body {
 	font-family: ProximaNova, Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	background-color: white;
@@ -185,13 +265,4 @@ button {
 .places button {
 	background-color: #DE1F12;
 	color: white;	
-}
-.logincontainer{
-background-color: white;
-color: black;
-width: 100%;
-Height: 100%;
-
-
-
 }
