--- a/WearAbouts/www/templates/html/camera.html
+++ b/WearAbouts/www/templates/html/camera.html
@@ -19,7 +19,8 @@
     <button id="stats_button" type="button" class="navbar-element btn"><i class="fa fa-bar-chart fa-2x"></i> </button>
     <button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
   </div>
-  <div class="camera_shot" id="camera_shot1">Picture 1</div>
-  <div class="camera_shot" id="camera_shot2">Picture 2</div>
+  <div class="camera_shot" id="camera_shot1"><p id="camera_text1">Picture 1</p></div>
+  <div class="camera_shot" id="camera_shot2"><p id="camera_text2">Picture 2</p></div>
+  <button id="picture_submit" type="submit">Submit</button>
 </body>
 </html>
