Fixed Login Buttons

--- a/WearAbouts/www/templates/html/login.html
+++ b/WearAbouts/www/templates/html/login.html
@@ -27,7 +27,7 @@
         <div class="signinline"> <h2 class="form-signin-heading">Please sign in</h2> </div>
         <div class="signinline"><input type="text" class="form-control" placeholder="Username" required autofocus></div>
         <div class="signinline"><input type="password" class="form-control" placeholder="Password" required></div>
-        <div class="signinline"> <button id="login" class="btn btn-lg btn-primary btn-block" type="submit">Log in</button> 
+        <div class="signinline"> <button id="login"  type="submit">Log in</button> 
 		<button id="signup" type="button" onclick="location.href = 'signup.html';">Sign up</button></div>
       </form>
 
