fixed feed button

--- a/WearAbouts/www/templates/html/feed.html
+++ b/WearAbouts/www/templates/html/feed.html
@@ -16,7 +16,7 @@
 <body>
 	<div class="navbar">
 		<button id="camera_button" type="button" class="navbar-element btn on-page"><i class="fa fa-camera-retro fa-2x"></i></button>
-		<button id="feed_button" type="button" class="navbar-element btn"><i class="fa fa-question-circle fa-2x"></i></button>
+		<button id="feed_button" type="button" class="navbar-element btn"><i class="fa fa-users fa-2x"></i></button>
 		<button id="stats_button" type="button" class="navbar-element btn"><i class="fa fa-bar-chart fa-2x"></i> </button>
 		<button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
 	</div>
