--- a/WearAbouts/www/templates/css/custom.css
+++ b/WearAbouts/www/templates/css/custom.css
@@ -9,8 +9,9 @@ color:#DE1F12;
 background-color: white;
 width:100%;
 font-family:Tahoma, Geneva, sans-serif;
-
+font-weight:900;
 position:relative;
+font-size: 300%;
 
 }
 
@@ -41,6 +42,7 @@ width:100%;
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
+  font-size:115%;
 }
 .form-signin .checkbox {
   font-weight: normal;
