--- a/WearAbouts/www/templates/html/login.html
+++ b/WearAbouts/www/templates/html/login.html
@@ -18,7 +18,7 @@
 <body>
   
 <div id="logincontainer">
-    <div id="logintitle"><h1>WearAbouts</h1></div>
+    <div id="logintitle"> <span class="bold" <h1>WearAbouts</h1>  </class> </div>
    
   
       <div class="container">
