Signup Page Finalized, Few Login Edits

--- a/WearAbouts/www/templates/html/login.html
+++ b/WearAbouts/www/templates/html/login.html
@@ -18,11 +18,8 @@
 <body>
   
 <div id="logincontainer">
-    <div id="logintitle"> <span class="bold" <h1>WearAbouts</h1>  </class> </div>
-   
-  
-      <div class="container">
-
+    <div id="logintitle"> <span class="bold" <h1>WearAbouts</h1> </div>
+     
       <form class="form-signin" role="form">
         <div class="signinline"> <h2 class="form-signin-heading">Please sign in</h2> </div>
         <div class="signinline"><input type="text" class="form-control" placeholder="Username" required autofocus></div>
