--- a/WearAbouts/www/templates/html/signup.html
+++ b/WearAbouts/www/templates/html/signup.html
@@ -11,21 +11,25 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.0.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="../js/signup.js"></script>
+  <script type="text/javascript" src="../js/login.js"></script>
   <script type="text/javascript" src="../../cordova.js"></script>
+  <link rel="stylesheet" href="../css/custom.css">
 </head>
-
 <body>
-  
-  <div id="main">
-    <h1>Sign up for WearAbouts</h1>
-    <form>
-      Username: <input type="text" class="username" required><br>
-      Password: <input type="password" class="password" required><br>
-      Email: <input type="text" id="email" required>
-    </form>
-    <button id="signup" type="submit">Sign up</button>
-  </div>
-</body>
 
+<div id="logincontainer">
+    <div id="logintitle"> <span class="bold" <h1>WearAbouts</h1></div>
+
+    <div class="container">
+      <form class="form-signin" role="form">
+		<div class="signinline"> <h2 class="form-signin-heading">Sign up for WearAbouts</h2> </div>
+        <div class="signinline"><input type="text" class="form-control" placeholder="Username" required autofocus></div>
+        <div class="signinline"><input type="text" class="form-control" placeholder="Password" required autofocus> </div>
+		<div class="signinline"><input type="text" class="form-control" placeholder="Email" required autofocus></div>
+        <div class="signinline"> <button id="signup" type="submit">Sign up</button>
+    
+    </form>
+    </div> <!-- /container -->
+</div>
+</body>
 </html>
