camera.js and signup.js

--- a/WearAbouts/www/templates/html/feed.html
+++ b/WearAbouts/www/templates/html/feed.html
@@ -21,59 +21,8 @@
 		<button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
 	</div>
 
-	<div id="page">
-		<div id="page-1-content" style="display: none;">
-			<img src="spinner.gif" style="display: block; margin: auto; margin-top: 50px;">
-
-		</div>
-		<div id="page-2-content" style="display: none;">
-			<img src="spinner.gif" style="display: block; margin: auto; margin-top: 50px;">
-		</div>
-		<div id="page-3-content" style="display: none;">
-			<img src="spinner.gif" style="display: block; margin: auto; margin-top: 50px;">
-			<!-- <ol style="font-size:190%">
-				<li id ="location-1-list"><a id="location-1">Location - n views</a></li>
-				<li id ="location-2-list"><a id="location-2">Location - n views</a></li>
-				<li id ="location-3-list"><a id="location-3">Location - n views</a></li>
-				<li id ="location-4-list"><a id="location-4">Location - n views</a></li>
-				<li id ="location-5-list"><a id="location-5">Location - n views</a></li>
-				<li id ="location-6-list"><a id="location-6">Location - n views</a></li>
-			</ol>	 -->
-		</div>
-		<div id="location-1-content" style="display:none;" >
-			<p style="font-size:190%">Picture will go here from Location 1 <br/>
-				<button id="meh" type="button" class="navbar-element btn" style="font-size:190%">Back</button> 
-			</p>
-		</div>
-		<div id="location-2-content" style="display:none;" >
-			<p style="font-size:190%">Picture will go here from Location 2 <br/>
-				<button id="meh1" type="button" class="navbar-element btn" style="font-size:190%">Back</button> 
-			</p>
-		</div>
-		<div id="location-3-content" style="display:none;" >
-			<p style="font-size:190%">Picture will go here from Location 3 <br/>
-				<button id="meh2" type="button" class="navbar-element btn" style="font-size:190%">Back</button> 
-			</p>
-		</div>
-		<div id="location-4-content" style="display:none;" >
-			<p style="font-size:190%">Picture will go here from Location 4 <br/>
-				<button id="meh3" type="button" class="navbar-element btn" style="font-size:190%">Back</button> 
-			</p>
-		</div>
-		<div id="location-5-content" style="display:none;" >
-			<p style="font-size:190%">Picture will go here from Location 5 <br/>
-				<button id="meh4" type="button" class="navbar-element btn" style="font-size:190%">Back</button> 
-			</p>
-		</div>
-		<div id="location-6-content" style="display:none;" >
-			<p style="font-size:190%">Picture will go here from Location 6 <br/>
-				<button id="meh5" type="button" class="navbar-element btn" style="font-size:190%">Back</button> 
-			</p>
-		</div>
-		<div id="page-4-content" style="display: none;">4</div>
+	<div class="container">
+		
 	</div>
-	
-
-
 </body>
 </html>
