--- a/WearAbouts/www/templates/html/signup.html
+++ b/WearAbouts/www/templates/html/signup.html
@@ -23,9 +23,9 @@
     <div class="container">
       <form class="form-signin" role="form">
 		<div class="signinline"> <h2 class="form-signin-heading">Sign up for WearAbouts</h2> </div>
-        <div class="signinline"><input type="text" class="form-control" placeholder="Username" required autofocus></div>
-        <div class="signinline"><input type="text" class="form-control" placeholder="Password" required autofocus> </div>
-		<div class="signinline"><input type="text" class="form-control" placeholder="Email" required autofocus></div>
+        <div class="signinline"><input type="text" class="form-control" id="username" required autofocus></div>
+        <div class="signinline"><input type="text" class="form-control" id="password" required autofocus> </div>
+		<div class="signinline"><input type="text" class="form-control" id="email" required autofocus></div>
         <div class="signinline"> <button id="signup" type="submit">Sign up</button>
     
     </form>
