--- a/WearAbouts/www/templates/html/stats.html
+++ b/WearAbouts/www/templates/html/stats.html
@@ -20,5 +20,9 @@
     <button id="stats_button" type="button" class="navbar-element btn"><i class="fa fa-bar-chart fa-2x"></i> </button>
     <button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
   </div>
+  <div class="container">
+    <img class="display">
+    <button id="next_button" type="button">Next</button>
+  </div>
 </body>
 </html>
