--- a/WearAbouts/platforms/android/assets/www/templates/html/camera.html
+++ b/WearAbouts/platforms/android/assets/www/templates/html/camera.html
@@ -21,8 +21,10 @@
     <button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
   </div>
   <div class="container">
-    <div class="camera_shot" id="camera_shot1"><p id="camera_text1">Picture 1</p></div>
-    <div class="camera_shot" id="camera_shot2"><p id="camera_text2">Picture 2</p></div>
+    <div class="camera_shot" id="camera_shot1"><p id="camera_text1">Picture 1</p><img id="pic1"src=""></div>
+    <br>
+    <div class="camera_shot" id="camera_shot2"><p id="camera_text2">Picture 2</p><img id="pic2" src=""></div>
+    <br>
     <button id="picture_submit" type="submit">Submit</button>
   </div>
 </body>
