--- a/WearAbouts/www/templates/html/login.html
+++ b/WearAbouts/www/templates/html/login.html
@@ -14,6 +14,7 @@
   <script type="text/javascript" src="../js/login.js"></script>
   <script type="text/javascript" src="../../cordova.js"></script>
   <link rel="stylesheet" href="../css/custom.css">
+
 </head>
 <body>
   
@@ -22,8 +23,8 @@
      
       <form class="form-signin" role="form">
         <div class="signinline"> <h2 class="form-signin-heading">Please sign in</h2> </div>
-        <div class="signinline"><input type="text" class="form-control" id="username" required autofocus></div>
-        <div class="signinline"><input type="password" class="form-control" id="password" required></div>
+        <div class="signinline"><input type="text" class="form-control" placeholder="Username" id="username" required autofocus></div>
+        <div class="signinline"><input type="password" class="form-control" placeholder="Password" id="password" required></div>
         <div class="signinline"> <button id="login"  type="submit">Log in</button> 
 		<button id="signup" type="button" onclick="location.href = 'signup.html';">Sign up</button></div>
       </form>
