--- a/WearAbouts/www/templates/html/login.html
+++ b/WearAbouts/www/templates/html/login.html
@@ -25,8 +25,8 @@
         <div class="signinline"> <h2 class="form-signin-heading">Please sign in</h2> </div>
         <div class="signinline"><input type="text" class="form-control" placeholder="Username" id="username" required autofocus></div>
         <div class="signinline"><input type="password" class="form-control" placeholder="Password" id="password" required></div>
-        <div class="signinline"> <button id="login"  type="submit">Log in</button> 
-		<button id="signup" type="button" onclick="location.href = 'signup.html';">Sign up</button></div>
+        <div class="signinline"> <button id="login" class="loginbutton" type="submit">Log in</button> 
+		<button id="signuplink" type="button" class="loginbutton" onclick="location.href = 'signup.html';">Sign up</button></div>
       </form>
 
     </div> <!-- /container -->
