--- a/WearAbouts/www/templates/html/signup.html
+++ b/WearAbouts/www/templates/html/signup.html
@@ -26,7 +26,7 @@
         <div class="signinline"><input type="text" class="form-control" placeholder="Username" id="username" required autofocus></div>
         <div class="signinline"><input type="password" class="form-control" placeholder="Password" id="password" required autofocus> </div>
 		<div class="signinline"><input type="text" class="form-control" placeholder="E-mail" id="email" required autofocus></div>
-        <div class="signinline"> <button id="signup" type="submit">Sign up</button>
+        <div class="signinline"> <button id="signup" class="loginbutton" type="submit">SIGN UP!</button>
     
     </form>
     </div> <!-- /container -->
