stats page done basics

--- a/WearAbouts/www/templates/html/stats.html
+++ b/WearAbouts/www/templates/html/stats.html
@@ -21,8 +21,8 @@
     <button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
   </div>
   <div class="container">
-    <img class="display">
-    <button id="next_button" type="button">Next</button>
+    <p id="count1" style="color:black"></p>
+    <p id="count2" style="color:black"><p>
   </div>
 </body>
 </html>
