--- a/WearAbouts/www/templates/html/feed.html
+++ b/WearAbouts/www/templates/html/feed.html
@@ -22,7 +22,10 @@
 	</div>
 
 	<div class="container">
-		
+		<img id="pic1" src="">
+		<br>
+		<button id="neither" type="button">Neither</button>
+		<img id="pic2" src="">
 	</div>
 </body>
 </html>
