--- a/WearAbouts/www/templates/html/feed.html
+++ b/WearAbouts/www/templates/html/feed.html
@@ -22,10 +22,11 @@
 	</div>
 
 	<div class="container">
-		<img id="pic1" src="">
+		<img id="pic1" src="pic">
 		<br>
 		<button id="neither" type="button">Neither</button>
-		<img id="pic2" src="">
+		<br>
+		<img id="pic2" src="pic">
 	</div>
 </body>
 </html>
