--- a/WearAbouts/www/templates/html/feed.html
+++ b/WearAbouts/www/templates/html/feed.html
@@ -24,7 +24,7 @@
 	<div class="container">
 		<img id="pic1" src="">
 		<br>
-		<!-- <button id="neither" type="button">Neither</button> -->
+		<button id="neither" type="button">Neither</button>
 		<br>
 		<img id="pic2" src="">
 	</div>
