--- a/WearAbouts/www/templates/html/stats.html
+++ b/WearAbouts/www/templates/html/stats.html
@@ -22,7 +22,9 @@
   </div>
   <div class="container">
     <p id="count1" style="color:black"></p>
+	<img id="pic1" src="">
     <p id="count2" style="color:black"><p>
+	<img id="pic2" src="">
   </div>
 </body>
 </html>
