--- a/WearAbouts/platforms/android/assets/www/templates/html/stats.html
+++ b/WearAbouts/platforms/android/assets/www/templates/html/stats.html
@@ -16,13 +16,15 @@
 <body>
   <div class="navbar">
     <button id="camera_button" type="button" class="navbar-element btn on-page"><i class="fa fa-camera-retro fa-2x"></i></button>
-    <button id="feed_button" type="button" class="navbar-element btn"><i class="fa fa-users fa-2x"></i></button>
+    <button id="feed_button" type="button" class="navbar-element btn"><i class="fa fa-question-circle fa-2x"></i></button>
     <button id="stats_button" type="button" class="navbar-element btn"><i class="fa fa-bar-chart fa-2x"></i> </button>
     <button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
   </div>
   <div class="container">
-    <img class="display">
-    <button id="next_button" type="button">Next</button>
+    <p id="count1" style="color:black"></p>
+	<img id="pic1" src="">
+    <p id="count2" style="color:black"><p>
+	<img id="pic2" src="">
   </div>
 </body>
 </html>
