--- a/WearAbouts/platforms/android/assets/www/templates/css/custom.css
+++ b/WearAbouts/platforms/android/assets/www/templates/css/custom.css
@@ -4,9 +4,29 @@
 }
 
 
-#logintitle{
+#count1{
 color:#DE1F12;
 background-color: white;
+width:100%;
+font-family:Tahoma, Geneva, sans-serif;
+position:relative;
+font-size: 150%;
+
+}
+
+#count2{
+color:#DE1F12;
+background-color: white;
+width:100%;
+font-family:Tahoma, Geneva, sans-serif;
+position:relative;
+font-size: 150%;
+}
+
+
+#logintitle{
+color:white;
+background-color: #DE1F12;
 width:100%;
 font-family:Tahoma, Geneva, sans-serif;
 font-weight:900;
@@ -17,13 +37,74 @@ font-size: 300%;
 
 #loginline{
 width:100%;
+}
 
+#neither{
+width:100%;
+height:8%;
+background-color:#DE1F12; 
+position:realtive;
+color:white;
+font-weight:bold;
+border: 1px solid #DE1F12;
 
+margin-top:2em;
+margin-bottom:2em;
+}
 
+#pic1{
+width:100%;
+max-height:14em;
+overflow: hidden;
+background-color:whtie; 
+position:realtive;
+float:center;
+color:#DE1F12;
+font-weight:bold;
+margin-top:0px;
+border-bottom:2px solid #DE1F12 ;
+border-top:2px solid #DE1F12 ;
+}
+
+#pic2{
+width:100%;
+max-height:14em;
+overflow: hidden;
+background-color:whtie; 
+position:realtive;
+float:center;
+color:#DE1F12;
+font-weight:bold;
+border-bottom:2px solid #DE1F12 ;
+border-top:2px solid #DE1F12 ;
 }
 
 
 
+
+
+.loginbutton{
+color:white;
+background-color:#DE1F12;
+margin-bottom: 10px;
+width:40%;
+padding-top:10px;
+padding-bottom:10px;
+border-radius: 10px;
+border: 1px solid white;
+}
+
+
+.loginbutton{
+color:white;
+background-color:#DE1F12;
+margin-bottom: 10px;
+width:100%;
+padding-top:10px;
+padding-bottom:10px;
+border-radius: 10px;
+border: 1px solid white;
+}
 
 
 #logincontainer {
@@ -272,9 +353,11 @@ button {
 	background-color:red;
 	width:40%;
 }
-#pic1{
+
+
+/* #pic1{
 	max-height:14em;
 }
 #pic2{
 	max-height:14em;
-}
+}*/
