--- a/WearAbouts/platforms/android/assets/www/templates/html/feed.html
+++ b/WearAbouts/platforms/android/assets/www/templates/html/feed.html
@@ -16,13 +16,19 @@
 <body>
 	<div class="navbar">
 		<button id="camera_button" type="button" class="navbar-element btn on-page"><i class="fa fa-camera-retro fa-2x"></i></button>
-		<button id="feed_button" type="button" class="navbar-element btn"><i class="fa fa-users fa-2x"></i></button>
+		<button id="feed_button" type="button" class="navbar-element btn"><i class="fa fa-question-circle fa-2x"></i></button>
 		<button id="stats_button" type="button" class="navbar-element btn"><i class="fa fa-bar-chart fa-2x"></i> </button>
 		<button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
 	</div>
 
 	<div class="container">
-		
+		<br />
+		<br />
+		<img id="pic1" src="">
+		<br>
+		<button id="neither" type="button">Neither</button>
+		<br>
+		<img id="pic2" src="">
 	</div>
 </body>
 </html>
