--- a/WearAbouts/platforms/android/assets/www/templates/html/signup.html
+++ b/WearAbouts/platforms/android/assets/www/templates/html/signup.html
@@ -23,10 +23,10 @@
     <div class="container">
       <form class="form-signin" role="form">
 		<div class="signinline"> <h2 class="form-signin-heading">Sign up for WearAbouts</h2> </div>
-        <div class="signinline"><input type="text" class="form-control" id="username" required autofocus></div>
-        <div class="signinline"><input type="password" class="form-control" id="password" required autofocus> </div>
-		<div class="signinline"><input type="text" class="form-control" id="email" required autofocus></div>
-        <div class="signinline"> <button id="signup" type="submit">Sign up</button>
+        <div class="signinline"><input type="text" class="form-control" placeholder="Username" id="username" required autofocus></div>
+        <div class="signinline"><input type="password" class="form-control" placeholder="Password" id="password" required autofocus> </div>
+		<div class="signinline"><input type="text" class="form-control" placeholder="E-mail" id="email" required autofocus></div>
+        <div class="signinline"> <button id="signup" class="loginbutton" type="submit">SIGN UP!</button>
     
     </form>
     </div> <!-- /container -->
