--- a/WearAbouts/www/templates/html/login.html
+++ b/WearAbouts/www/templates/html/login.html
@@ -5,8 +5,8 @@
   <title>WearAbouts</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../css/reset.css" />
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" type="text/css" href="../css/reset.css" />
+  <link rel="stylesheet" type="text/css" href="../css/styles.css" />
   <link rel="stylesheet" type="text/css" href="../css/custom.css" />
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.0.min.js"></script>
@@ -25,7 +25,7 @@
         <div class="signinline"><input type="password" class="form-control" placeholder="Password" id="password" required></div>
         <div class="signinline">
           <button id="login" class="loginbutton" type="submit">Log in</button> 
-		      <button id="signuplink" type="button" class="loginbutton" onclick="location.href = 'signup.html';">Sign up</button>
+		      <button id="signup" type="button" class="loginbutton">Sign up</button>
         </div>
       </form>
 </div>
