--- a/WearAbouts/www/templates/html/login.html
+++ b/WearAbouts/www/templates/html/login.html
@@ -17,17 +17,17 @@
 <body>
   
 <div id="logincontainer">
-    <div id="logintitle"> <span class="bold" <h1>WearAbouts</h1> </div>
+    <div id="logintitle"> <span class="bold">WearAbouts</span></div>
      
       <form class="form-signin" role="form">
         <div class="signinline"> <h2 class="form-signin-heading">Please sign in</h2> </div>
         <div class="signinline"><input type="text" class="form-control" placeholder="Username" id="username" required autofocus></div>
         <div class="signinline"><input type="password" class="form-control" placeholder="Password" id="password" required></div>
-        <div class="signinline">
-          <button id="login" class="loginbutton" type="submit">Log in</button> 
-		      <button id="signup" type="button" class="loginbutton">Sign up</button>
-        </div>
       </form>
+      <div class="signinline">
+          <button id="login" class="loginbutton" type="submit">Log in</button> 
+          <button id="signup" type="button" class="loginbutton">Sign up</button>
+        </div>
 </div>
 </body>
 </html>
