--- a/WearAbouts/www/templates/html/signup.html
+++ b/WearAbouts/www/templates/html/signup.html
@@ -11,14 +11,14 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.0.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="../js/login.js"></script>
+  <script type="text/javascript" src="../js/signup.js"></script>
   <script type="text/javascript" src="../../cordova.js"></script>
   <link rel="stylesheet" href="../css/custom.css">
 </head>
 <body>
 
 <div id="logincontainer">
-    <div id="logintitle"> <span class="bold" <h1>WearAbouts</h1></div>
+    <div id="logintitle"> <span class="bold">WearAbouts</span></div>
 
     <div class="container">
       <form class="form-signin" role="form">
@@ -26,9 +26,9 @@
         <div class="signinline"><input type="text" class="form-control" placeholder="Username" id="username" required autofocus></div>
         <div class="signinline"><input type="password" class="form-control" placeholder="Password" id="password" required autofocus> </div>
 		<div class="signinline"><input type="text" class="form-control" placeholder="E-mail" id="email" required autofocus></div>
-        <div class="signinline"> <button id="signup" class="loginbutton" type="submit">SIGN UP!</button>
     
     </form>
+    <button id="signup" class="loginbutton" type="submit">SIGN UP!</button>
     </div> <!-- /container -->
 </div>
 </body>
