--- a/WearAbouts/www/templates/html/feed.html
+++ b/WearAbouts/www/templates/html/feed.html
@@ -23,12 +23,12 @@
 
 	<div class="container">
 		<br />
-		<br />
-		<img id="pic1" src="">
-		<br>
+		
+		<center> <img id="pic1" src=""> </center>
+		
 		<button id="neither" type="button">Neither</button>
 		<br>
-		<img id="pic2" src="">
+		<center><img id="pic2" src=""></center>
 	</div>
 </body>
 </html>
