--- a/WearAbouts/www/templates/css/simple-sidebar.css
+++ b/WearAbouts/www/templates/css/simple-sidebar.css
@@ -71,8 +71,8 @@
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
-    background: rgba(255,255,255,0.2);
+    /* color: #fff;
+    background: rgba(255,255,255,0.2); */
 }
 
 .sidebar-nav li a:active,
@@ -91,7 +91,7 @@
 }
 
 .sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
+    /*color: #fff;
+    background: none; */
 }
 
