--- a/WearAbouts/www/templates/html/stats.html
+++ b/WearAbouts/www/templates/html/stats.html
@@ -21,9 +21,21 @@
     <button id="logout_button" type="button" class="navbar-element btn"><i class="fa fa-power-off fa-2x"></i> </button>
   </div>
   <div class="container">
-    <p id="count1" style="color:black"></p>
+    <p id="count1" style="
+        margin-top:2%;
+        color:#DE1F12;
+        margin-left:auto;
+        margin-right:auto;
+        font-weight:bold;
+        "></p>
 	<img id="pic1" src="">
-    <p id="count2" style="color:black"><p>
+    <p id="count2" style="
+        margin-top:2%;
+        color:#DE1F12;
+        margin-left:auto;
+        margin-right:auto;
+        font-weight:bold;
+        "><p>
 	<img id="pic2" src="">
   </div>
 </body>
