loading animation implemented

--- a/WearAbouts/www/templates/html/camera.html
+++ b/WearAbouts/www/templates/html/camera.html
@@ -12,6 +12,8 @@
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="../js/camera.js"></script>
   <script type="text/javascript" src="../../cordova.js"></script>
+  <script type="text/javascript" src="../js/spin.js"></script>
+  <script type="text/javascript" src="../js/buttons.js"></script>
 </head>
 <body>
   <div class="navbar">
