--- a/WearAbouts/www/templates/html/stats.html
+++ b/WearAbouts/www/templates/html/stats.html
@@ -12,6 +12,8 @@
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="../js/stats.js"></script>
   <script type="text/javascript" src="../../cordova.js"></script>
+  <script type="text/javascript" src="../js/spin.js"></script>
+  <script type="text/javascript" src="../js/buttons.js"></script>
 </head>
 <body>
   <div class="navbar">
@@ -27,7 +29,7 @@
         margin-left:auto;
         margin-right:auto;
         font-weight:bold;
-        "></p>
+        ">Current count for picture 1: 0</p>
 	<img id="pic1" src="">
     <p id="count2" style="
         margin-top:2%;
@@ -35,7 +37,7 @@
         margin-left:auto;
         margin-right:auto;
         font-weight:bold;
-        "><p>
+        ">Current count for picture 2: 0<p>
 	<img id="pic2" src="">
   </div>
 </body>
